Made play mode functional again. Added level transition but needs work.